--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,18 +6,66 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>971</width>
-    <height>619</height>
+    <width>1076</width>
+    <height>834</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="7,10,0" columnstretch="1,3">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="7,0,0,0,0" columnstretch="1,3">
     <property name="spacing">
      <number>6</number>
     </property>
+    <item row="2" column="0">
+     <widget class="QWidget" name="experiment" native="true">
+      <layout class="QGridLayout" name="gridLayout_5" columnstretch="0,0,0,0">
+       <item row="2" column="3">
+        <widget class="QToolButton" name="TargetImage_ToolButton">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="Experiment_Label">
+         <property name="text">
+          <string>Experiment</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="TargetImage_Label">
+         <property name="text">
+          <string>Target Image</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" colspan="2">
+        <widget class="QLineEdit" name="TargetImage_LineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QPushButton" name="Test_PushButton">
+         <property name="text">
+          <string>Test</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QPushButton" name="SaveExperiment_PushButton">
+         <property name="text">
+          <string>Save</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QWidget" name="model" native="true">
       <property name="sizePolicy">
@@ -93,7 +141,7 @@
        <item row="3" column="1">
         <widget class="QLineEdit" name="Seed_LineEdit">
          <property name="enabled">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="text">
           <string>0</string>
@@ -184,66 +232,130 @@
       </layout>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QWidget" name="drag" native="true">
-      <layout class="QGridLayout" name="gridLayout_3" columnstretch="4,4,1,1,4">
-       <item row="4" column="4">
-        <widget class="QPushButton" name="Reset4StepSize_PushButton">
+    <item row="4" column="0">
+     <widget class="QWidget" name="mask" native="true">
+      <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,0,0,0,0">
+       <item row="2" column="3">
+        <widget class="QPushButton" name="Plus4Radius_PushButton">
          <property name="text">
-          <string>Reset</string>
+          <string>+</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QPushButton" name="Minus4Lambda_PushButton">
+         <property name="text">
+          <string>-</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="2">
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLineEdit" name="Lambda_LineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>0.5</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3" colspan="2">
+        <widget class="QCheckBox" name="ShowMask_CheckBox">
+         <property name="text">
+          <string>Show mask</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="2">
+        <widget class="QPushButton" name="ResetMask_PushButton">
+         <property name="text">
+          <string>Reset mask</string>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
-        <widget class="QLabel" name="Drag_Label">
+        <widget class="QLabel" name="Mask_Label">
          <property name="text">
-          <string>Drag</string>
+          <string>Mask</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1" colspan="2">
-        <widget class="QLineEdit" name="R2_LineEdit"/>
-       </item>
-       <item row="8" column="3">
-        <widget class="QPushButton" name="SaveGenerate_PushButton">
+       <item row="3" column="4">
+        <widget class="QLabel" name="Lambda_Label">
          <property name="text">
-          <string>Save</string>
+          <string>Lambda</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1" colspan="2">
-        <widget class="QLineEdit" name="StepSize_LineEdit"/>
-       </item>
-       <item row="8" column="1">
-        <widget class="QLabel" name="Steps_Label">
+       <item row="2" column="4">
+        <widget class="QLabel" name="Radius_Label">
          <property name="text">
-          <string>Steps:</string>
+          <string>Radius</string>
          </property>
         </widget>
        </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="Radius_LineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" colspan="2">
+        <widget class="QPushButton" name="FlexibleArea_PushButton">
+         <property name="text">
+          <string>Flexible area</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="QPushButton" name="Minus4Radius_PushButton">
+         <property name="text">
+          <string>-</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="3">
+        <widget class="QPushButton" name="Plus4Lambda_PushButton">
+         <property name="text">
+          <string>+</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3" colspan="2">
+        <widget class="QPushButton" name="FixedArea_PushButton">
+         <property name="text">
+          <string>Fixed area</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="1" rowspan="5">
+     <widget class="ImageWidget" name="Image_Widget" native="true"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QWidget" name="drag" native="true">
+      <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,1,1,2,2">
        <item row="5" column="1" colspan="2">
         <widget class="QLineEdit" name="R1_LineEdit"/>
-       </item>
-       <item row="1" column="1" colspan="3">
-        <widget class="QPushButton" name="Start_PushButton">
-         <property name="text">
-          <string>Start</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="4">
-        <widget class="QPushButton" name="Reset4R1_PushButton">
-         <property name="text">
-          <string>Reset</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="3">
-        <widget class="QPushButton" name="AddPoint_PushButton">
-         <property name="text">
-          <string>Add point</string>
-         </property>
-        </widget>
        </item>
        <item row="8" column="2">
         <widget class="QLabel" name="StepNumber_Label">
@@ -252,24 +364,10 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="4">
-        <widget class="QPushButton" name="ResetPoint_PushButton">
+       <item row="1" column="4">
+        <widget class="QPushButton" name="Stop_PushButton">
          <property name="text">
-          <string>Reset point</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="3">
-        <widget class="QLabel" name="R1_Label">
-         <property name="text">
-          <string>R1</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="3">
-        <widget class="QLabel" name="R2_Label">
-         <property name="text">
-          <string>R2</string>
+          <string>Stop</string>
          </property>
         </widget>
        </item>
@@ -287,10 +385,79 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="4">
-        <widget class="QPushButton" name="Stop_PushButton">
+       <item row="4" column="1" colspan="2">
+        <widget class="QLineEdit" name="StepSize_LineEdit"/>
+       </item>
+       <item row="6" column="1" colspan="2">
+        <widget class="QLineEdit" name="R2_LineEdit"/>
+       </item>
+       <item row="8" column="3">
+        <widget class="QPushButton" name="SaveGenerate_PushButton">
          <property name="text">
-          <string>Stop</string>
+          <string>Save</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="3">
+        <widget class="QPushButton" name="Start_PushButton">
+         <property name="text">
+          <string>Start</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QPushButton" name="ResetPoint_PushButton">
+         <property name="text">
+          <string>Reset point</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="4">
+        <widget class="QPushButton" name="Reset4R1_PushButton">
+         <property name="text">
+          <string>Reset</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="4">
+        <widget class="QPushButton" name="Reset4StepSize_PushButton">
+         <property name="text">
+          <string>Reset</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" colspan="3">
+        <widget class="QPushButton" name="AddPoint_PushButton">
+         <property name="text">
+          <string>Add point</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="Drag_Label">
+         <property name="text">
+          <string>Drag</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QLabel" name="Steps_Label">
+         <property name="text">
+          <string>Steps:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="3">
+        <widget class="QLabel" name="R1_Label">
+         <property name="text">
+          <string>R1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="3">
+        <widget class="QLabel" name="R2_Label">
+         <property name="text">
+          <string>R2</string>
          </property>
         </widget>
        </item>
@@ -310,124 +477,18 @@
       </layout>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QWidget" name="mask" native="true">
-      <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,0,0,0,0">
-       <item row="1" column="3" colspan="2">
-        <widget class="QCheckBox" name="ShowMask_CheckBox">
-         <property name="text">
-          <string>Show mask</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="Mask_Label">
-         <property name="text">
-          <string>Mask</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLineEdit" name="Radius_LineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>1</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2">
-        <widget class="QPushButton" name="Minus4Radius_PushButton">
-         <property name="text">
-          <string>-</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="2">
-        <widget class="QPushButton" name="FlexibleArea_PushButton">
-         <property name="text">
-          <string>Flexible area</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QLineEdit" name="Lambda_LineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>0.5</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="4">
-        <widget class="QLabel" name="Drag_Label_5">
-         <property name="text">
-          <string>Lambda</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="3">
-        <widget class="QPushButton" name="Plus4Radius_PushButton">
-         <property name="text">
-          <string>+</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="4">
-        <widget class="QLabel" name="Drag_Label_4">
-         <property name="text">
-          <string>Radius</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="2">
-        <widget class="QPushButton" name="Minus4Lambda_PushButton">
-         <property name="text">
-          <string>-</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1" colspan="2">
-        <widget class="QPushButton" name="ResetMask_PushButton">
-         <property name="text">
-          <string>Reset mask</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="3">
-        <widget class="QPushButton" name="Plus4Lambda_PushButton">
-         <property name="text">
-          <string>+</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3" colspan="2">
-        <widget class="QPushButton" name="FixedArea_PushButton">
-         <property name="text">
-          <string>Fixed area</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="2">
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="0" column="1" rowspan="3">
-     <widget class="ImageWidget" name="Image_Widget" native="true"/>
+    <item row="3" column="0">
+     <spacer name="verticalSpacer_4">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
@@ -436,7 +497,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>971</width>
+     <width>1076</width>
      <height>21</height>
     </rect>
    </property>
