--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1076</width>
+    <width>1126</width>
     <height>834</height>
    </rect>
   </property>
@@ -21,96 +21,7 @@
     <item row="2" column="0">
      <widget class="QWidget" name="experiment" native="true">
       <layout class="QGridLayout" name="gridLayout_5" columnstretch="0,0,0,0,0">
-       <item row="3" column="1">
-        <widget class="QCheckBox" name="OnePoint_CheckBox">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string>1 point</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">Point_ButtonGroup</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="4" column="4">
-        <widget class="QCheckBox" name="SevenBlock_CheckBox">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string>7</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">Block_ButtonGroup</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QCheckBox" name="FourBlock_CheckBox">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string>4</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">Block_ButtonGroup</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="0" column="4">
-        <widget class="QPushButton" name="SaveExperiment_PushButton">
-         <property name="text">
-          <string>Save</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="TargetImage_Label">
-         <property name="text">
-          <string>Target Image</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <spacer name="verticalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="2" column="1" colspan="3">
-        <widget class="QLineEdit" name="TargetImage_LineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="Experiment_Label">
-         <property name="text">
-          <string>Experiment</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="3">
+       <item row="6" column="3">
         <widget class="QCheckBox" name="SixBlock_CheckBox">
          <property name="enabled">
           <bool>true</bool>
@@ -126,28 +37,53 @@
          </attribute>
         </widget>
        </item>
-       <item row="2" column="4">
-        <widget class="QToolButton" name="TargetImage_ToolButton">
+       <item row="6" column="4">
+        <widget class="QCheckBox" name="SevenBlock_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
-          <string>...</string>
+          <string>7</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Block_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="TargetImage_Label">
+         <property name="text">
+          <string>Target Image</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="LatentBlock_Label">
+       <item row="6" column="1">
+        <widget class="QCheckBox" name="FourBlock_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
-          <string>Latent Block</string>
+          <string>4</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Block_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLabel" name="TestTimes_Label">
+         <property name="text">
+          <string>Test times</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
-        <widget class="QPushButton" name="Test_PushButton">
-         <property name="text">
-          <string>Test</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="2">
+       <item row="6" column="2">
         <widget class="QCheckBox" name="FiveBlock_CheckBox">
          <property name="enabled">
           <bool>true</bool>
@@ -163,17 +99,37 @@
          </attribute>
         </widget>
        </item>
-       <item row="3" column="2">
-        <widget class="QCheckBox" name="FivePoints_CheckBox">
+       <item row="5" column="1">
+        <widget class="QCheckBox" name="OnePoint_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
-          <string>5 points</string>
+          <string>1 point</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
          </property>
          <attribute name="buttonGroup">
           <string notr="true">Point_ButtonGroup</string>
          </attribute>
         </widget>
        </item>
-       <item row="3" column="3">
+       <item row="0" column="0">
+        <widget class="QLabel" name="Experiment_Label">
+         <property name="text">
+          <string>Experiment</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QPushButton" name="Test_PushButton">
+         <property name="text">
+          <string>Test</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="3">
         <widget class="QCheckBox" name="SixtyEightPoints_CheckBox">
          <property name="text">
           <string>68 points</string>
@@ -184,6 +140,91 @@
          <attribute name="buttonGroup">
           <string notr="true">Point_ButtonGroup</string>
          </attribute>
+        </widget>
+       </item>
+       <item row="7" column="1">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="6" column="0">
+        <widget class="QLabel" name="LatentBlock_Label">
+         <property name="text">
+          <string>Latent Block</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="2">
+        <widget class="QCheckBox" name="FivePoints_CheckBox">
+         <property name="text">
+          <string>5 points</string>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Point_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QLineEdit" name="TestTimes_LineEdit">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" colspan="3">
+        <widget class="QLineEdit" name="TargetImage_LineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="4">
+        <widget class="QToolButton" name="TargetImage_ToolButton">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QPushButton" name="SaveExperiment_PushButton">
+         <property name="text">
+          <string>Save</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLabel" name="DragTimes_Label">
+         <property name="text">
+          <string>Drag times</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="2">
+        <widget class="QLineEdit" name="DragTimes_LineEdit">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>200</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3">
+        <widget class="QPushButton" name="Experience_PushButton">
+         <property name="text">
+          <string>Test</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -607,7 +648,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1076</width>
+     <width>1126</width>
      <height>21</height>
     </rect>
    </property>
